# medusa

./: pyproject.toml  requirements.txt
.github/: README.md
medusa/: medusa.py
medusa/config/: utils.py
medusa/scripts/: port_scanning.py
translations/: README_pt-br.md
