[tool.poetry]
name = "medusa"
version = "0.1.0"
description = "🪼 Medusa is a compilation of several multipurpose hacking tools"
authors = ["marques <uniqueduckinbox@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
